Refactored getMinFlyTime method, simplified return type, fixed tests